tdf#142344 SwNavigator: Keep heading selected after navigating to

headings in tables and sections

Currently after navigating to a heading in a table or section from the
Navigator the table or section is selected in the Navigator content
tree. This patch makes the Navigator selection remain on the heading
until the cursor is moved to another outline position which then makes
the Navigator track tables and sections again.

Change-Id: Idfcfd168fbbda541d07bbcadbaad62772ef156af
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/123244
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>